fixed the toggle button. It maintains its current position when in dark mode

--- a/style.css
+++ b/style.css
@@ -118,15 +118,16 @@ span {
     transition: 0.5s;
 }
 
-.checkbox:checked + .toggle::after {
+
+.toggle.active {
+    box-shadow: inset 0 5px 5px #000;
+    background-color: #413b3b;
+}
+
+.toggle.active::after {
     background-color: #fff;
     left: 1.5rem;
     transform: translateX(100%);
-}
-
-.checkbox:checked + .toggle {
-    box-shadow: inset 0 5px 5px #000;
-    background-color: #413b3b;
 }
 
 
